Update logic and add some tests

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-01-16 - Sean Huber (shuber@huberry.com)
+  * Update logic and add some tests
+
 2009-01-15 - Sean Huber (shuber@huberry.com)
   * Initial commit
   * Add logic
