--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 2009-01-16 - Sean Huber (shuber@huberry.com)
   * Update logic and add some tests
+  * Add more tests
 
 2009-01-15 - Sean Huber (shuber@huberry.com)
   * Initial commit
