--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 2009-01-16 - Sean Huber (shuber@huberry.com)
   * Update logic and add some tests
   * Add more tests
+  * Rename README.markdown to README.rdoc
 
 2009-01-15 - Sean Huber (shuber@huberry.com)
   * Initial commit
