--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-01-17 - Sean Huber (shuber@huberry.com)
+  * Update code documentation
+
 2009-01-16 - Sean Huber (shuber@huberry.com)
   * Update logic and add some tests
   * Add more tests
