--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 2009-01-17 - Sean Huber (shuber@huberry.com)
   * Update code documentation
   * Make the sortable_scope_changes instance method public
+  * Add more tests
 
 2009-01-16 - Sean Huber (shuber@huberry.com)
   * Update logic and add some tests
