--- a/README.rdoc
+++ b/README.rdoc
@@ -118,6 +118,81 @@ Any attributes specified as a :scope that are changed on an item cause the item 
   @todo_2.position # 1
 
 
+== Instance methods
+
+  # Adds the current item to the end of the specified list and saves
+  #
+  # If the current item is already in the list, it will remove it before adding it
+  add_to_list!(list_name = nil)
+  
+  # Returns the first item in a list associated with the current item
+  first_item(list_name = nil)
+  
+  # Returns a boolean after determining if the current item is the first item in the specified list
+  first_item?(list_name = nil)
+  
+  # Returns a boolean after determining if the current item is in the specified list
+  in_list?(list_name = nil)
+  
+  # Inserts the current item at a certain position in the specified list and saves
+  #
+  # If the current item is already in the list, it will remove it before adding it
+  #
+  # Aliased as insert_at_position!
+  insert_at!(position = 1, list_name = nil)
+  
+  # Returns the item with a position at a certain offset to the current item's position in the specified list
+  #
+  # Example
+  #
+  #   @todo = Todo.create
+  #   @todo_2 = Todo.create
+  #   @todo.item_at_offset(1) # returns @todo_2
+  #
+  # Returns nil if an item at the specified offset could not be found
+  item_at_offset(offset, list_name = nil)
+  
+  # Returns the last item in a list associated with the current item
+  last_item(list_name = nil)
+  
+  # Returns a boolean after determining if the current item is the last item in the specified list
+  last_item?(list_name = nil)
+  
+  # Returns the position of the last item in a specified list
+  #
+  # Returns 0 if there are no items in the specified list
+  last_position(list_name = nil)
+  
+  # Moves the current item down one position in the specified list and saves
+  move_down!(list_name = nil)
+  
+  # Moves the current item up one position in the specified list and saves
+  move_up!(list_name = nil)
+  
+  # Moves the current item down to the bottom of the specified list and saves
+  move_to_bottom!(list_name = nil)
+  
+  # Moves the current item up to the top of the specified list and saves
+  move_to_top!(list_name = nil)
+  
+  # Returns the next lower item in the specified list
+  next_item(list_name = nil)
+  
+  # Returns the previous higher item in the specified list
+  previous_item(list_name = nil)
+  
+  # Removes the current item from the specified list and saves
+  #
+  # This will set the :position to nil
+  remove_from_list!(list_name = nil)
+  
+  # Returns a boolean after determining if this item has changed any attributes specified in the :scope options
+  sortable_scope_changed?
+  
+  # Stores an array of attributes specified as a :scope that have been changed
+  sortable_scope_changes
+
+
 == Contact
 
 Problems, comments, and suggestions all welcome: shuber@huberry.com
