--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
   * Make the sortable_scope_changes instance method public
   * Add more tests
   * Update README
+  * Add gemspec
 
 2009-01-16 - Sean Huber (shuber@huberry.com)
   * Update logic and add some tests
