--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 2009-05-13 - Sean Huber (shuber@huberry.com)
   * Fix bug - item_at_offset method was not scoping correctly
+  * Rename MIT_LICENSE to MIT-LICENSE
 
 2009-01-17 - Sean Huber (shuber@huberry.com)
   * Update code documentation
