--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-05-27 - Sean Huber (shuber@huberry.com)
+  * Use self.class.base_class when scoping records
+
 2009-05-13 - Sean Huber (shuber@huberry.com)
   * Fix bug - item_at_offset method was not scoping correctly
   * Rename MIT_LICENSE to MIT-LICENSE
