--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 2009-05-30 - Sean Huber (shuber@huberry.com)
   * Always convert options[:conditions] into an array
+  * options[:conditions] can be a hash
 
 2009-05-29 - Sean Huber (shuber@huberry.com)
   * Call remove_from_lists after destroy instead of before in case any other before_destroy callbacks fail
