--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2009-07-06 - Sean Huber (shuber@huberry.com)
+  * Fix bug related to boolean scopes
+
 2009-05-30 - Sean Huber (shuber@huberry.com)
   * Always convert options[:conditions] into an array
   * options[:conditions] can be a hash
